1.0.3 (2018-11-22)
------
* EVOL Now stores moderator's login on event validation or rejection + Include custom SQL scripts
* EVOL Event JSON representation is now completed (all fields filled)
* EVOL country name is not required (country code is enough)

1.0.2 (2018-11-14)
------
* EVOL Allow retrieval of a list of events
* EVOL Manage event submission datetime UTC

1.0.1 (2018-11-13)
------
* EVOL Store more event submission data (submitter, url, event type, etc.) and allowing storing with no previous geocoding