@@ -12,8 +12,8 @@ CREATE TABLE events (
     datetime_end DATETIME NULL,
     datetime_start_utc DATETIME NULL,
     datetime_end_utc DATETIME NULL,
-    address TEXT NOT NULL,
-    place_name VARCHAR(200) NOT NULL,
+    address TEXT NULL,
+    place_name VARCHAR(200) NULL,
     postal_code VARCHAR(32) NULL,
     country_code VARCHAR(2) NOT NULL,
     url VARCHAR(255) NULL,
